Several missing/incorrect guards for LOG_DISABLED=0 against Release build (Mac) https://bugs.webkit.org/show_bug.cgi?id=78735

Patch by Andres Gomez <agomez@igalia.com> on 2013-11-22
Reviewed by Mario Sanchez Prada.

In a "Debug" build the CString.h header comes from another
indirect dependency. Now, we explicitly add this missing include.

* page/CaptionUserPreferencesMediaAF.cpp: Explicitly adding
missing include.

Canonical link: https://commits.webkit.org/142949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159695 268f45cc-cd09-0410-ab3c-d52691b4dbfc